# pdcurses-cmake

./: README.md
src/pdcurses-3.9/: CMakeLists.txt
src/pdcurses-3.9/pdcurses/: insstr.c  instr.c  slk.c
src/pdcurses-3.9/wincon/: pdcdisp.c
